--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alkalami&family=Comforter+Brush&family=Dancing+Script&family=Fuzzy+Bubbles&family=Indie+Flower&family=Inspiration&family=Josefin+Sans:wght@300&family=Lobster&family=Oswald:wght@200&family=Pacifico&family=Permanent+Marker&family=Roboto:wght@300&family=Satisfy&family=Shadows+Into+Light&family=Shalimar&family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>New Creation Services 808, LLC</title>
+  </head>
+  <body style="display: flex; justify-content: center">
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 60%;
+      "
+    >
+      <h1
+        class="permanentmarkerfont centeredtext"
+        style="
+          border: 5px solid black;
+          padding: 3px;
+          margin: 5px;
+          background-color: blue;
+          padding: 5px;
+          color: white;
+        "
+      >
+        <i>New Creation Services 808, LLC</i>
+      </h1>
+      <h2 class="permanentmarkerfont">
+        <i>"Happy House, Happy Spouse"</i>
+      </h2>
+      <p style="display: flex; align-items: center" class="alkalamifont">
+        <img
+          src="img/0D78B894-1445-42CE-8291-EF7CAD97743A_1_105_c.jpeg"
+          alt="Plumbing"
+          width="450"
+          height="650"
+          style="
+            border: 10px dotted green;
+            padding: 3px;
+            margin: 5px;
+            float: left;
+          "
+        />
+        All-around handyman...anything construction, plumbing, electrical,
+        foundation, whatever...even free consultations. Specializes in
+        gate-valve replacement & location. We've been in construction for over
+        20 years. Anything you want to do, we'll figure it out with you.
+      </p>
+      <p style="display: flex; align-items: center" class="alkalamifont">
+        You need a window changed, a new door...how about your toilet needs to
+        be replaced...need to put in an air conditioner? Call us, we can do it
+        for you.
+        <img
+          src="img/11C15678-0BBD-4958-ADAF-9FFAAA9FEA9E_1_105_c.jpeg"
+          alt="Air Condition"
+          width="450"
+          height="650"
+          style="
+            border: 10px solid blue;
+            padding: 3px;
+            margin: 5px;
+            float: right;
+          "
+        />
+      </p>
+      <p p style="display: flex; align-items: center" class="alkalamifont">
+        Recently, we put up saddle racks, bridal, and halter shelving...hey, we
+        even build stages for your entertainment.
+      </p>
+      <div>
+        <img
+          src="img/E003A794-32FC-40CE-A312-FED69DF3280D_1_105_c.jpeg"
+          alt="Bridals & Tack"
+          width="650"
+          height="450"
+          style="border: 10px dashed burlywood; padding: 3px; margin: 5px"
+        />
+      </div>
+      <div>
+        <img
+          src="img/65E00E4D-0BB2-4948-9A9A-9126FE206541_1_105_c.jpeg"
+          alt="Saddle Racks"
+          width="650"
+          height="450"
+          style="border: 10px solid black; padding: 3px; margin: 5px"
+        />
+      </div>
+      <br />
+      <b class="lobsterfont">Wesley Purdy</b>
+      <br />
+      <span class="lobsterfont">Contact: newcreationservices808@gmail.com</span>
+      <br />
+      <span class="lobsterfont">(808) 336-1216</span>
+    </div>
+  </body>
+</html>
